apps/huginn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: huginn
  labels:
    app: huginn
