apps/huginn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huginn-dp
  namespace: huginn
  labels:
    app: huginn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huginn
  template:
    metadata:
      labels:
        app: huginn
    spec:
      containers:
        - name: huginn
          image: ghcr.io/huginn/huginn:v2026.10.04
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huginn-postgres-dp
  namespace: huginn
  labels:
    app: huginn-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huginn-postgres
  template:
    metadata:
      labels:
        app: huginn-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: huginn-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: huginn-postgres-data
          hostPath:
            path: /mnt/ssd/app-data/huginn/postgres
            type: DirectoryOrCreate
